# pca9536-driver

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yaml  test.yaml
examples/: example_0.py  example_1.py  example_2.py
src/pca9536/: __init__.py  pca9536.py
tests/: test_pca9536.py
