[metadata]
name = pca9536
version = attr: pca9536.__version__
description = Python driver for PCA9536 GPIO expander
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Hardware :: Hardware Drivers
    Typing :: Typed

[options]
zip_safe = True
include_package_data = False
package_dir=
    =src
packages = find:
install_requires =
    smbus2 >= 0.3.0

[options.packages.find]
where=src
